# mirador

./: .clang-format  AGENTS.md  CMakeLists.txt  STAGE_MANAGEMENT_PLAN.md  miracle.cc  miracle.config  miracle.cpp  mirage.cc  mirage_config.cc  mirage_config.h  mirage_keybind.cc  mirage_keybind.h  stage_manager.cc  stage_manager.h  window_manager.cc  window_manager.h
